# Single-Agent-Trader

./: .dockerignore  .env.bluefin.example  .env.coinbase  .env.example  .gitignore  .pre-commit-config.yaml  ADAPTIVE_STRATEGY_MANAGER_GUIDE.md  BLUEFIN_DOCKER_FIXES.md  BLUEFIN_KEY_CONVERSION_FIX.md  BLUEFIN_ORDER_SIGNATURE_SYSTEM.md  BLUEFIN_SYNTAX_WARNING_FIX.md  BLUEFIN_WEBSOCKET_AUTH.md  CALLBACK_ERROR_ANALYSIS.md  CDP_INTEGRATION_GUIDE.md  CIPHER_B_FILTER_IMPLEMENTATION.md  CLAUDE.md  COINBASE_IMPLEMENTATION.md  COMPONENT_MIGRATION_PROCEDURES.md  CONFIGURATION_SECURITY_RECOMMENDATIONS.md  CRITICAL_FIXES_APPLIED.md  DEPLOYMENT.md  DEPLOYMENT_SIMPLIFICATION.md  DOCKER.md  DOCKERFILE_IMPROVEMENTS_SUMMARY.md  DOCKER_PERMISSION_FIXES.md  DOCKER_TESTING_INFRASTRUCTURE_SUMMARY.md  DOMINANCE_CANDLESTICK_IMPLEMENTATION.md  DOMINANCE_TEST_SUMMARY.md  Dockerfile  Dockerfile.bluefin  Dockerfile.bluefin-live  Dockerfile.bluefin-orbstack  Dockerfile.bluefin-uv  Dockerfile.bluefin-uv-optimized  Dockerfile.mcp  Dockerfile.minimal  Dockerfile.simple  Dockerfile.slim  Dockerfile.stress-test  Dockerfile.vps  (+272 more)
.github/workflows/: ci.yml  deploy.yml  docker-compose-test.yml  security-gate.yml  security-scan.yml
bluefin-service/: Dockerfile  bluefin_service.py  requirements-minimal.txt  requirements.txt
bot/: __init__.py  command_consumer.py  config.py  config_backup.py  config_backup_large.py  config_manager.py  config_utils.py  config_with_deps.py  error_handling.py  example_integration.py  fee_calculator.py  health.py  llm_logging.py  logging.py  main.py  main.py.backup  market_making_config.py  memory_optimizer.py  order_manager.py  paper_trading.py  paper_trading_enhanced.py  performance_monitor.py  position_manager.py  risk.py  system_monitor.py  trading_types.py  types.py  utils.py  validator.py  websocket_publisher.py
bot/analysis/: __init__.py  (+1 more)
config/: bluefin_testnet.json  bluefin_trading.json  concurrency_optimized.json  conservative_config.json  development.json  docker.json  dominance_config.json  live_trading_safe.json  llm_logging_example.json  market_making.json  monitoring_config.json  paper_trading.json  postgresql.conf  redis.conf  schema.json  spot_trading_config.json  sub_minute_trading.json  vps_production.json
dashboard/: DOCKER.md  NETWORK_SETUP.md  SETUP.md  docker-compose.standalone.yml  docker-compose.yml  docker-setup.sh  start-dashboard.sh  test-docker.sh  test-network-config.sh  test-websocket-connectivity.sh  test-websocket.html
docker/: Dockerfile  Makefile.slim  README.md  daemon.json  test-compose.yml  test-config.yml
docs/: AI_Trading_Bot_Architecture.md  API_Reference.md  BACKUP_RESTORE_GUIDE.md  BLUEFIN_ORDERBOOK_TESTING_STRATEGY.md  BLUEFIN_QUICK_START.md  BLUEFIN_SETUP_GUIDE.md  CI_CD_Environment_Setup.md  DEPLOYMENT_GUIDE_1CORE.md  Deployment_Guide.md  Docker_Network_Fix_Summary.md  ERROR_HANDLING_TEST_GUIDE.md  Environment_Setup_Guide.md  FP_CONFIGURATION_MIGRATION_GUIDE.md  FP_MIGRATION_GUIDE.md  FP_PERFORMANCE_ANALYSIS.md  FP_TROUBLESHOOTING_GUIDE.md  LLM_LOGGING_GUIDE.md  MCP_LOGGING_GUIDE.md  MCP_MEMORY_LOGGING_ENHANCEMENTS.md  Operations_Manual.md  PAPER_TRADING_MIGRATION.md  PAPER_TRADING_SIMPLIFICATION.md  PROPERTY_BASED_TESTING_GUIDE.md  Performance_Optimization.md  REALTIME_WEBSOCKET_GUIDE.md  SLIM_DEPLOYMENT_GUIDE.md  SPOT_TO_FUTURES_TRANSFER.md  STRESS_TEST_README.md  TESTING_DEPENDENCIES_AND_DOCKER.md  UBUNTU_DOCKER_DEPLOYMENT_TESTING.md  UNIFIED_INDICATOR_FRAMEWORK.md  User_Guide.md  VOLUME_ENCRYPTION_GUIDE.md  VPS_DEPLOYMENT_GUIDE.md  VPS_TROUBLESHOOTING.md  WEBSOCKET_INTEGRATION.md  asyncio_task_management_fixes.md  bluefin_connection_handling.md  bluefin_integration.md  bluefin_websocket_setup.md  (+20 more)
examples/: README.md  backup_restore_example.sh  bluefin_authenticated_websocket_demo.py  bluefin_websocket_example.py  custom_profiles_example.py  dominance_integration_example.py  enhanced_data_layer_demo.py  inventory_management_example.py  market_data_example.py  market_making_examples.py  market_making_performance_example.py  monitoring_example.py  performance_integration_example.py  performance_monitoring_scripts.py  scalping_strategy_example.py  strategy_integration_example.py  unified_framework_example.py
nginx/: nginx-secure.conf
prompts/: trade_action.txt  trade_action_with_sentiment.txt
scripts/: INSTALLATION_GUIDE.md  LOG_VALIDATION_README.md  PERFORMANCE_MONITORING_README.md  README_DOCKER_TESTING.md  alert_manager.py  automated-safe-deployment.sh  backup-encrypted.sh  backup-system.sh  check-network-connectivity.py  check_cfm_products.py  check_futures_min_size.py  clean_start.sh  cleanup-temp-files.sh  close_futures_position.py  close_nano_futures.py  code-quality.sh  container-monitor.py  demo-monitor.py  demo_docker_testing_workflow.py  deploy-1core-vps.sh  deploy-vps.sh  deploy-x64-linux.sh  deployment-health-check.sh  diagnose-bluefin-connectivity.sh  diagnose-bluefin.sh  disaster-recovery.sh  docker-build.sh  docker-compose-monitoring.yml  docker-entrypoint-simple.sh  docker-entrypoint.sh  docker-health-check.sh  docker-logs.sh  docker-run.sh  docker-start-trading-bot.sh  docker_log_monitor.py  emergency-rollback.sh  emergency_reset.py  extract_cdp_keys.py  find_futures_contracts.py  fix-bluefin-key-conversion.sh  (+94 more)
security/: deploy-digitalocean-firewall.sh  digitalocean-firewall-config.json  docker-network-security.yml  network-monitoring.py  network-security-policies.md  setup-network-security.sh
services/: Dockerfile.bluefin  bluefin_sdk_service.py  docker-entrypoint-bluefin-simple.sh  docker-entrypoint-bluefin.sh  generate_api_key.py  healthcheck.sh  ubuntu-healthcheck.sh
tests/: FP_TEST_INFRASTRUCTURE_GUIDE.md  README_E2E_DOCKER_TESTING.md  README_OMNISEARCH_TESTS.md  README_VUMANCHU_TESTING.md  __init__.py  conftest.py  fp_migration_adapters.py  fp_test_base.py  requirements-test.txt  run_error_tests.py  test_e2e_vumanchu_docker.py  test_memory_optimizer.py  test_orderbook_mock_data_comprehensive.py  test_vumanchu_complete.py  validate_vumanchu_implementation.py  websocket_resilience_test.py
(+657 files in other folders)
